[package]
name = "amebazii"
version = "0.1.1"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.23", features = ["derive"]}
colored = {version = "2.2.0" }
hex = { version = "0.4.3", features = ["serde"] }
object = { version = "0.36.7", features = ["build", "write"] }
openssl = "0.10.68"
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.134"
