[package]
name = "amebazii"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/MatrixEditor/amebazii"
include = [
    "Cargo.toml",
    "src/**/*",
    "LICENSE",
    "README.md",
    "examples/**/*"
]
rust-version="1.81.0"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.23", features = ["derive"]}
clap-num = "1.1.1"
colored = {version = "2.2.0" }
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
object = { version = "0.36.7", features = ["build", "write"] }
openssl = "0.10.68"
pretty-hex = "0.4.1"
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.134"
textwrap = "0.16.2"

[lib]
name = "amebazii"
path = "src/amebazii/lib.rs"

[[bin]]
name = "amebazii"
test = false
doc = false

[features]
documentation = []
